// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connect 1`] = `
Object {
  "dispatch": [Function],
  "plug": undefined,
  "query": [Function],
}
`;

exports[`connect with init as function 1`] = `
Object {
  "dispatch": [Function],
  "plug": undefined,
  "query": [Function],
  "some": "state",
}
`;

exports[`connect with init as object 1`] = `
Object {
  "dispatch": [Function],
  "plug": undefined,
  "query": [Function],
  "some": "state",
}
`;

exports[`connect with pending function state 1`] = `
Object {
  "dispatch": [Function],
  "plug": undefined,
  "query": [Function],
  "some": "state",
}
`;

exports[`connect with pending object state 1`] = `
Object {
  "dispatch": [Function],
  "plug": undefined,
  "query": [Function],
  "some": "state",
}
`;

exports[`connect with plugin, no state and dispatch 1`] = `
Object {
  "dispatch": [Function],
  "plug": Object {},
  "query": [Function],
}
`;

exports[`connect with plugin, no state and dispatch 2`] = `
Object {
  "dispatch": [Function],
  "plug": Object {},
  "query": [Function],
  "some": "state",
}
`;

exports[`connect with plugin, state function  1`] = `
Object {
  "dispatch": [Function],
  "plug": Object {
    "custom": Object {
      "action": [Function],
      "thing": 1,
    },
  },
  "query": [Function],
  "some": "state",
}
`;

exports[`dispatch action 1`] = `
Object {
  "dispatch": [Function],
  "plug": undefined,
  "query": [Function],
  "some": "state",
}
`;

exports[`force dispatch 1`] = `
Object {
  "dispatch": [Function],
  "plug": undefined,
  "query": [Function],
  "some": "forced state",
}
`;

exports[`query with action 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"dispatch\\": [Function anonymous],
    \\"plug\\": undefined,
    \\"query\\": [Function anonymous],
+   \\"some\\": \\"state\\",
  }"
`;

exports[`register on connected store 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"dispatch\\": [Function anonymous],
    \\"plug\\": undefined,
    \\"query\\": [Function anonymous],
+   \\"some\\": \\"state\\",
  }"
`;

exports[`register on connected store with init as function 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"dispatch\\": [Function anonymous],
    \\"plug\\": undefined,
    \\"query\\": [Function anonymous],
+   \\"some\\": \\"state\\",
  }"
`;

exports[`useStore 1`] = `
Object {
  "id": undefined,
  "pending": Array [],
}
`;

exports[`useStore named 1`] = `
Object {
  "d": [Function],
  "dispatch": [Function],
  "id": "store1",
  "pending": Array [],
  "producer": [Function],
  "query": [Function],
  "state": Object {
    "dispatch": [Function],
    "id": "store1",
    "plug": undefined,
    "query": [Function],
  },
}
`;

exports[`useStore named 2`] = `
Object {
  "dispatch": [Function],
  "id": "store1",
  "plug": undefined,
  "query": [Function],
}
`;
